# sennet

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
Applications/: CMakeLists.txt  Client.cpp
Editor/: CMakeLists.txt
Editor/Include/Editor/: EditorLayer.hpp
Editor/Source/Editor/: EditorLayer.cpp
Editor/apps/: CMakeLists.txt  Editor.cpp
Sennet/: CMakeLists.txt
Sennet/Example/: CMakeLists.txt  Client.cpp  HTTPServer.cpp  Sandbox.cpp  Server.cpp  TCPClient.cpp  TCPServer.cpp
Sennet/Include/Platform/Linux/: LinuxSocket.hpp  LinuxWindow.hpp
Sennet/Include/Platform/OpenGL/: OpenGLBuffer.hpp  OpenGLContext.hpp  OpenGLFramebuffer.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLVertexArray.hpp
Sennet/Include/Platform/Windows/: WindowsWindow.hpp
Sennet/Include/Sennet/: Pch.hpp  Sennet.hpp
Sennet/Include/Sennet/Containers/: Image.hpp
Sennet/Include/Sennet/Core/: Application.hpp  Base.hpp  Input.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  MouseCodes.hpp  Timestep.hpp  Window.hpp
Sennet/Include/Sennet/Debug/: Instrumentor.hpp
Sennet/Include/Sennet/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Sennet/Include/Sennet/ImGui/: ImGuiLayer.hpp
Sennet/Include/Sennet/Network/: Base.hpp  Server.hpp  Socket.hpp  TSQueue.hpp  ThreadSafeQueue.hpp
Sennet/Include/Sennet/Renderer/: Buffer.hpp  Framebuffer.hpp  GraphicsContext.hpp  OrthographicCamera.hpp  OrthographicCameraController.hpp  RenderCommand.hpp  Renderer.hpp  Renderer2D.hpp  RendererAPI.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
Sennet/Include/Sennet/Synchronization/: Synchronizer.hpp  Timestamp.hpp
Sennet/Source/Platform/Linux/: LinuxInput.cpp  LinuxSocket.cpp  LinuxWindow.cpp
Sennet/Source/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
Sennet/apps/: CMakeLists.txt
Sennet/example/: CMakeLists.txt  Server.cpp
Sennet/include/Sennet/: Pch.hpp  Sennet.hpp
apps/: CMakeLists.txt  Client.cpp  Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.hpp  SandboxApplication.cpp  Serialization.cpp  Server.cpp  SynchronizationNode.cpp  TestZED.cpp  UHINode.cpp  ZEDControl.cpp  ZEDNode.cpp  ZEDbroadcast.cpp  ZEDclient.cpp  ZEDlisten.cpp  ZEDlivefeed.cpp  ZEDrecord.cpp  ZEDserver.cpp  ZEDstream.cpp  client.cpp  node_user.cpp  node_zed.cpp  sandbox.cpp  serialization.cpp  server.cpp  simple.cpp  test_client.cpp  test_generic.cpp  test_hello_world.cpp  test_inheritance.cpp  test_serialization.cpp  test_server.cpp  test_uhi.cpp  test_user.cpp  test_zed.cpp  zed_record.cpp  zedrecord.cpp
src/: CMakeLists.txt  Client.cpp  ZEDController.cpp  ZEDListener.cpp  ZEDReceiver.cpp  ZEDRecorder.cpp  ZEDSender.cpp  ZEDStreamer.cpp  ZEDcontrol.cpp  ZEDfunctional.cpp  ZEDio.cpp  ZEDnetwork.cpp  ZEDtypes.cpp  application.cpp  io.cpp  lib.cpp  log.cpp  main.cpp  network.cpp  sensor_handler.cpp  serialization.cpp  types.cpp  zed_handler.cpp  zed_utils.cpp  zederrors.cpp
src/Core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Node.cpp  Window.cpp
src/Editor/: EditorLayer.cpp  EditorLayer.hpp
src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiUtilities.cpp
src/Messages/: BasicMessage.cpp  HelloMessage.cpp  ImageMessage.cpp  Message.cpp  MessageEncoder.cpp  NetworkMessage.cpp  ZEDMessage.cpp
src/Network/: Client.cpp  Connection.cpp  ConnectionManager.cpp  Endpoint.cpp  Server.cpp  Socket.cpp
src/Platform/Linux/: LinuxInput.cpp  LinuxWindow.cpp  LinuxWindow.hpp
src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.hpp
src/Primitives/: Image.cpp  Primitives.cpp  ZED.cpp  ZEDParameters.cpp  ZEDSettings.cpp
src/Renderer/: Buffer.cpp  GraphicsContext.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
src/Sennet/: Pch.hpp  Sennet.hpp
src/Sennet/Core/: Application.cpp  Application.hpp  Base.hpp  KeyCodes.hpp  Layer.cpp  LayerStack.hpp  Log.cpp  Timestep.hpp  Window.cpp  Window.hpp
src/Sennet/Debug/: Instrumentor.hpp
src/Sennet/Events/: ApplicationEvent.hpp  Event.hpp
src/Sennet/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
src/Sennet/Network/: Connection.hpp  Server.hpp
src/Sennet/Renderer/: Buffer.cpp  Buffer.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.cpp  OrthographicCamera.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  Renderer.cpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Texture.cpp  Texture.hpp  VertexArray.cpp
src/Sennet/Scene/: Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
src/Sennet/Synchronization/: Synchronizer.hpp  Timestamp.hpp
src/ZED/: Conversion.cpp  IO.cpp  Recorder.cpp
src/active_messaging/: action.cpp  connection.cpp  core.cpp  runtime.cpp  zed.cpp
src/am/: core.cpp
src/conversion/: zed.cpp
src/core/: application.cpp  layer.cpp  layer_stack.cpp  log.cpp  window.cpp
src/events/: event.cpp
src/handlers/: handler.cpp  zed_recorder.cpp
src/imgui/: imgui_build.cpp  imgui_layer.cpp
src/messages/: hello_world_message.cpp  image_message.cpp  message.cpp  message_encoder.cpp
src/network/: connection.cpp  connection_manager.cpp  message_encoder.cpp
src/platform/linux/: linux_input.cpp  linux_window.cpp
src/platform/opengl/: imgui_opengl_renderer.cpp  opengl_buffer.cpp  opengl_context.cpp  opengl_vertex_array.cpp
src/platform/windows/: windows_input.cpp  windows_window.cpp
src/renderer/: buffer.cpp  graphics_context.cpp  renderer.cpp  shader.cpp  vertex_array.cpp
src/types/: basic_types.cpp  primitives.cpp  zed.cpp
src/zed/: conversion.cpp  io.cpp  recorder.cpp  zed_recorder.cpp
(+257 files in other folders)
